Minor editor improvements - fixed too long property editors by specifying width for string property inputs - integer numeric properties now use number type input - transform and luminosity indices are now limited to their valid range

--- a/src/scss/editor.scss
+++ b/src/scss/editor.scss
@@ -114,6 +114,10 @@ select.withJumpButton, select.withUnsetButton {
     padding-right: 0.5em;
 }
 
+.stringInput {
+    width: 12em;
+}
+
 .numericInput {
     width: 4em;
 }
